<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContext"
    android:orientation="vertical">
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#247635"
    android:gravity="center"
    android:text="@string/themkhoanchi"
    android:textColor="#fff"
    android:textSize="24dp"
    android:textStyle="bold"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/khoiluong">

        </Spinner>
        <EditText
            android:id="@+id/tenmon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/tenmon"/>
        <EditText
            android:id="@+id/giatien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/giatien"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:orientation="horizontal">
       <TextView
           android:layout_width="0dp"
           android:layout_weight="3"
           android:layout_height="wrap_content"
           android:layout_margin="5dp"
           android:textColor="#000"
           android:text="@string/ngaygio"/>
       <TextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="5"
           android:id="@+id/tv_Data_time"/>
       <ImageView
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:id="@+id/btn_time"
           android:src="@drawable/calendar" />
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/them"
            android:id="@+id/btn_add"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/huy"
            android:id="@+id/btn_cancel"/>
    </LinearLayout>
</LinearLayout>